--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.473.0",
     "next": "14.2.11",
     "react": "^18",
