--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@reown/appkit": "^1.6.5",
+    "@reown/appkit-adapter-solana": "^1.6.5",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
