--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@project-serum/anchor": "^0.26.0",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-solana": "^1.6.5",
+    "@solana/spl-memo": "^0.2.5",
+    "@solana/spl-token": "^0.4.9",
     "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
+    "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.473.0",
