--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-solana": "^1.6.5",
@@ -18,10 +20,12 @@
     "@solana/spl-token": "^0.4.9",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
+    "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "cross-fetch": "^4.1.0",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
