--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reown/appkit-adapter-solana": "^1.6.5",
     "@solana/spl-memo": "^0.2.5",
     "@solana/spl-token": "^0.4.9",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.7.9",
